update StringStore::assignKey